[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/fonts/lunchds.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/objects/MainCamera.gd" type="Script" id=2]
[ext_resource path="res://src/objects/Spaceship.gd" type="Script" id=3]
[ext_resource path="res://assets/projectile-shoot.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/crosshair-target.png" type="Texture" id=5]
[ext_resource path="res://assets/crosshair.png" type="Texture" id=6]
[ext_resource path="res://assets/371282__nexotron__spaceship-engine-just-noise.wav" type="AudioStream" id=7]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="PrismMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
metallic = 1.0
metallic_specular = 0.0
emission_enabled = true
emission = Color( 0.2, 0.2, 0.2, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=4]
metallic = 1.0
metallic_specular = 1.0
emission_enabled = true
emission = Color( 0.321569, 0.321569, 0.321569, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[node name="Player" type="Spatial"]

[node name="MainCamera" type="Camera" parent="."]
current = true
far = 750.0
script = ExtResource( 2 )
target = NodePath("../Spaceship/Camera")

[node name="Spaceship" type="RigidBody" parent="." groups=[
"player.ship",
]]
contact_monitor = true
script = ExtResource( 3 )
ammo_regen = 10.0

[node name="CollisionShape" type="CollisionShape" parent="Spaceship"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Spaceship"]
transform = Transform( 9.55343e-15, -2.18557e-07, 0.8, -0.3, -1.31134e-08, 0, 5.68248e-08, -1.3, -2.40413e-07, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Spaceship/MeshInstance"]
transform = Transform( -1.31134e-08, -2.53526e-07, 0.8, 1.78629e-08, 0.8, 1.82915e-07, -0.4875, -1.36598e-07, -5.68248e-08, -0.666667, -0.538461, -0.5 )
mesh = SubResource( 2 )
material/0 = SubResource( 4 )

[node name="MeshInstance2" type="MeshInstance" parent="Spaceship/MeshInstance"]
transform = Transform( -1.31134e-08, -2.53526e-07, 0.8, 1.78629e-08, 0.8, 1.82915e-07, -0.4875, -1.36598e-07, -5.68248e-08, -0.666667, -0.538461, 0.5 )
mesh = SubResource( 2 )
material/0 = SubResource( 4 )

[node name="Camera" type="Camera" parent="Spaceship"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 1.6 )
current = true
far = 750.0

[node name="ProjectileShooter" type="Position3D" parent="Spaceship/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.87811 )

[node name="GUI" type="Control" parent="Spaceship/Camera"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="ColorRect" parent="Spaceship/Camera/GUI"]
margin_left = 472.0
margin_top = 280.0
margin_right = 480.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 0, 40 )
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="Spaceship/Camera/GUI"]
margin_left = 432.0
margin_top = 312.0
margin_right = 472.0
margin_bottom = 330.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "100%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoreMeltdown" type="Label" parent="Spaceship/Camera/GUI"]
margin_left = 384.0
margin_top = 32.0
margin_right = 640.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Core meltdown in"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="In" type="Label" parent="Spaceship/Camera/GUI/CoreMeltdown"]
margin_top = 32.0
margin_right = 256.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "60 seconds"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammo" type="ColorRect" parent="Spaceship/Camera/GUI"]
margin_left = 544.0
margin_top = 280.0
margin_right = 552.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 0, 40 )
color = Color( 0, 1, 0, 1 )

[node name="AmmoLabel" type="Label" parent="Spaceship/Camera/GUI"]
margin_left = 552.0
margin_top = 312.0
margin_right = 592.0
margin_bottom = 330.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "100%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsLabel" type="Label" parent="Spaceship/Camera/GUI"]
margin_right = 128.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 1 )
text = "Coins: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="TextureRect" parent="Spaceship/Camera/GUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrossTarget" type="Sprite" parent="Spaceship/Camera/GUI"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 256, 152 )
texture = ExtResource( 5 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Spaceship"]
stream = ExtResource( 4 )
attenuation_model = 2
unit_db = -5.0
unit_size = 2.0
bus = "Sounds"

[node name="CoreSFX" type="AudioStreamPlayer3D" parent="Spaceship"]
stream = ExtResource( 7 )
attenuation_model = 2
unit_db = -20.0
unit_size = 3.0
bus = "Sounds"
